# wh

./: .env  .gitingore  app.py  console.py  database.py  databaseUsers.py  file_format.py  home.py  keyboard.py  main.py  me_bot.py  new_file.csv  new_file.xlsx  pydantic_file.py  pyproject.toml  settings.py  todo.py
my_work/: console.py  database.py  file_format.py  keyboard.py  main.py  me_bot.py  pyproject.toml  settings.py
