[project]
name = "my-work"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "flask>=3.1.1",
    "flask-httpauth>=4.8.0",
    "flask-restful>=0.3.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "telebot>=0.0.5",
]
